# ArcadiaVoices

./: .gitignore  README.md  build_installer.sh  copy_web_resources.sh  index.html  inline_web_resources.cjs  make_rounded_icon.swift  package-lock.json  package.json  vite.config.ts
iPlug2OOS/ArcadiaVoices/: ArcadiaVoices.RPP  ArcadiaVoices.cpp  ArcadiaVoices.h  ArcadiaVoices.sln  CLAUDE.md  CMakeLists.txt  README.md  config.h  dsp_test
iPlug2OOS/ArcadiaVoices/ArcadiaVoices.xcworkspace/: contents.xcworkspacedata
iPlug2OOS/ArcadiaVoices/config/: ArcadiaVoices-ios.xcconfig  ArcadiaVoices-mac.xcconfig  ArcadiaVoices-wasm.mk  ArcadiaVoices-win.props
iPlug2OOS/ArcadiaVoices/dsp/: CMakeLists.txt  CircularBuffer.h  DelayPedalDSP.h  Filter.h  ModLFO.h  ParamSmoother.h  PitchDelayVoice.h  PitchDetector.h  PitchShifter.h  PresetManager.h  SoftClipper.h  TempoSync.h
iPlug2OOS/ArcadiaVoices/installer/: ArcadiaVoices.iss  changelog.txt  intro.md  known-issues.txt  license.md  readme-mac.md  readme-win-demo.md  readme-win.md
iPlug2OOS/ArcadiaVoices/manual/: ArcadiaVoices manual.md
iPlug2OOS/ArcadiaVoices/projects/: ArcadiaVoices-aax.vcxproj  ArcadiaVoices-aax.vcxproj.filters  ArcadiaVoices-app.vcxproj  ArcadiaVoices-app.vcxproj.filters  ArcadiaVoices-clap.vcxproj  ArcadiaVoices-clap.vcxproj.filters  ArcadiaVoices-vst2.vcxproj  ArcadiaVoices-vst2.vcxproj.filters  ArcadiaVoices-vst3.vcxproj  ArcadiaVoices-vst3.vcxproj.filters  ArcadiaVoices-wasm-dsp.mk  ArcadiaVoices-wasm-ui.mk
iPlug2OOS/ArcadiaVoices/projects/ArcadiaVoices-iOS.xcodeproj/: project.pbxproj
iPlug2OOS/ArcadiaVoices/projects/ArcadiaVoices-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme  iOS-AUv3.xcscheme  iOS-AUv3Framework.xcscheme  iOS-Update plists.xcscheme
iPlug2OOS/ArcadiaVoices/projects/ArcadiaVoices-macOS.xcodeproj/: project.pbxproj
iPlug2OOS/ArcadiaVoices/projects/ArcadiaVoices-macOS.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  macOS-AAX.xcscheme  macOS-APP with AUv3.xcscheme  macOS-APP.xcscheme  macOS-AUv2.xcscheme  macOS-AUv3.xcscheme  (+5 more)
iPlug2OOS/ArcadiaVoices/resources/: AV-AAX-Info.plist  AV-VST2-Info.plist  AV-macOS-AUv3-Info.plist  AV-macOS-Info.plist  ArcadiaVoices-AAX-Info.plist  ArcadiaVoices-AU-Info.plist  ArcadiaVoices-CLAP-Info.plist  ArcadiaVoices-Pages.xml  ArcadiaVoices-VST2-Info.plist  ArcadiaVoices-VST3-Info.plist  ArcadiaVoices-iOS-AUv3-Info.plist  ArcadiaVoices-iOS-Info.plist  ArcadiaVoices-iOS-LaunchScreen.storyboard  ArcadiaVoices-iOS-MainInterface.storyboard  ArcadiaVoices-macOS-AUv3-Info.plist  ArcadiaVoices-macOS-AUv3Framework-Info.plist  ArcadiaVoices-macOS-Info.plist  ArcadiaVoices-macOS-MainMenu.xib  ArcadiaVoicesAU.h  ArcadiaVoicesAUv3Appex.m  IPlugAUViewController_vArcadiaVoices.xib  main.rc  main.rc_mac_dlg
iPlug2OOS/ArcadiaVoices/scripts/: makedist-mac.sh  makedist-wasm.sh  makedist-win.bat  makeinstaller-mac.sh  makezip-win.py  prepare_resources-mac.py  update_installer-win.py  update_version-ios.py  update_version-mac.py
iPlug2OOS/ArcadiaVoices/tests/: main.cpp
src/: main.tsx
(+257 files in other folders)
